<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.famivac</groupId>
    <artifactId>gestionnaire</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>

    <name>gestionnaire</name>
    
    <developers>
        <developer>
            <id>hubesco</id>
            <name>Paolo Escobar</name>
            <email>paolo.escobar@hubesco.com</email>
            <url>https://hubesco.com/blog</url>
        </developer>
    </developers>
    
    <url>https://gestionnaire.famivac.fr</url>
    
    <inceptionYear>2015</inceptionYear>
    
    <scm>
        <connection>scm:git:ssh://git@github.com/famivac/famivac-gestionnaire.git</connection>
        <url>https://github.com/famivac/famivac-gestionnaire</url>
        <developerConnection>scm:git:ssh://git@github.com/famivac/famivac-gestionnaire.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <additionalparam>-Xdoclint:none</additionalparam>
        <skipUnitTests>false</skipUnitTests>
        
        <!-- Plugins versions -->
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-scm-provider-jgit.version>1.9.5</maven-scm-provider-jgit.version>
        <maven-deploy-plugin>2.8.2</maven-deploy-plugin>
        <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
        <maven-war-plugin.version>3.1.0</maven-war-plugin.version>
        
        <!-- Java EE dependencies -->
        <javaee.version>8.0.1</javaee.version>
        <thorntail.version>2.7.0.Final</thorntail.version>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        
        <!-- Dependencies versions -->
        <springsecurity.version>5.2.1.RELEASE</springsecurity.version>
        <javamelody.version>1.82.0</javamelody.version>
        <primefaces.version>7.0</primefaces.version>
        <bootstrap.version>3.3.7-1</bootstrap.version>
        <metismenu.version>2.6.1</metismenu.version>
        <sbadmin2.version>3.3.7</sbadmin2.version>
        <postgre.version>42.2.14</postgre.version>
        <jacoco.version>0.8.6</jacoco.version>
        <poi.version>4.1.0</poi.version>
        <itext.version>2.1.7</itext.version>
        <junit.version>5.6.2</junit.version>
        <mockito.version>3.4.0</mockito.version>
    </properties>
    
    <modules>
        <module>gestionnaire-web</module>
        <module>gestionnaire-familles</module>
        <module>gestionnaire-commons</module>
        <module>gestionnaire-enfants</module>
        <module>gestionnaire-administration</module>
        <module>gestionnaire-sejours</module>
    </modules>
    
    <dependencyManagement>
        <dependencies>
            <!-- Java EE dependencies -->
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-api</artifactId>
                <version>${javaee.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.thorntail</groupId>
                <artifactId>bom</artifactId>
                <version>${thorntail.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>net.bull.javamelody</groupId>
                <artifactId>javamelody-core</artifactId>
                <version>${javamelody.version}</version>
            </dependency>
            <dependency>
                <groupId>org.primefaces</groupId>
                <artifactId>primefaces</artifactId>
                <version>${primefaces.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgre.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.logmanager</groupId>
                <artifactId>jboss-logmanager</artifactId>
                <version>2.0.8.Final</version>
            </dependency>
            <dependency>
                <groupId>de.chkal.jsf</groupId>
                <artifactId>jsf-maven-util</artifactId>
                <version>1.1</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>bootstrap</artifactId>
                <version>${bootstrap.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars.npm</groupId>
                <artifactId>metismenu</artifactId>
                <version>${metismenu.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars.npm</groupId>
                <artifactId>startbootstrap-sb-admin-2</artifactId>
                <version>${sbadmin2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-core</artifactId>
                <version>${springsecurity.version}</version>
            </dependency>
            <!-- Data Exporter -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lowagie</groupId>
                <artifactId>itext</artifactId>
                <version>${itext.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>bouncycastle</groupId>
                        <artifactId>bcmail-jdk14</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>bouncycastle</groupId>
                        <artifactId>bcprov-jdk14</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.bouncycastle</groupId>
                        <artifactId>bctsp-jdk14</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- End Data Exporter -->
            <!-- Tests -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- End Tests -->
        </dependencies>
    </dependencyManagement>
    
    <build>
        <pluginManagement>
            <plugins>
                <!-- JDK 11 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M4</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>${junit.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <!-- Server -->
                <plugin>
                    <groupId>io.thorntail</groupId>
                    <artifactId>thorntail-maven-plugin</artifactId>
                    <version>${thorntail.version}</version>
                    <configuration>
                        <properties>
                            <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                            <java.net.preferIPv4Addresses>true</java.net.preferIPv4Addresses>
                        </properties>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>package</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>start</id>
                        </execution>
                        <execution>
                            <id>stop</id>
                        </execution>
                    </executions>
                </plugin>
                <!-- Release -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin}</version>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <!-- Coveralls -->
                <plugin>
                    <groupId>org.eluder.coveralls</groupId>
                    <artifactId>coveralls-maven-plugin</artifactId>
                    <version>${coveralls-maven-plugin.version}</version>
                    <!-- Not needed, using Travis CI -->
                    <!--
                    <configuration>
                        <repoToken>yourcoverallsprojectrepositorytoken</repoToken>
                    </configuration>
                    -->
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <id>default-prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>default-prepare-agent-integration</id>
                            <goals>
                                <goal>prepare-agent-integration</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>default-report</id>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>default-report-integration</id>
                            <goals>
                                <goal>report-integration</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    
    <repositories>
        <repository>
            <url>http://central.maven.org/maven2/</url>
            <id>Central</id>
            <layout>default</layout>
            <name>Central</name>
        </repository>
        <repository>
            <url>http://repository.primefaces.org/</url>
            <id>PrimeFaces-maven-lib</id>
            <name>Repository for library PrimeFaces-maven-lib</name>
        </repository>
        <repository>
            <id>jsf-maven-util-repo</id>
            <name>jsf-maven-util Repository</name>
            <url>http://chkal.github.com/jsf-maven-util/repository/</url>
        </repository>
        <repository>  
            <id>jboss-public-repository-group</id>  
            <name>JBoss Public Maven Repository Group</name>  
            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>  
            <layout>default</layout>  
            <releases>  
                <enabled>true</enabled>  
                <updatePolicy>never</updatePolicy>  
            </releases>  
            <snapshots>  
                <enabled>true</enabled>  
                <updatePolicy>never</updatePolicy>  
            </snapshots>  
        </repository>  
    </repositories>
    
</project>
